# honeydb-python

./: .gitignore  .pylintrc  .travis.yml  LICENSE  Makefile  README.md  README.rst  example.py  honeydb.py  pyproject.toml  setup.py
.github/workflows/: format-lint.yml
honeydb/: __init__.py  cli.py  exceptions.py
honeydb/api/: __init__.py  client.py
tests/: test_cli.py  test_client.py
