[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "honeydb"
version = "2.0.0"
description = "A Python API wrapper and CLI tool for HoneyDB."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "foospidy" }]
keywords = ["honeydb", "api", "wrapper", "library", "cli", "threat-intelligence"]
dependencies = ["requests>=2.31"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://honeydb.io"
Repository = "https://github.com/honeydbio/honeydb-python"

[project.scripts]
honeydb = "honeydb.cli:main"

[project.optional-dependencies]
dev = ["ruff", "build", "twine", "pytest", "requests-mock"]

[tool.hatch.build.targets.wheel]
packages = ["honeydb"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
